[gd_scene load_steps=2 format=3 uid="uid://test_scene_llama"]

[ext_resource type="Script" path="res://addons/ohmydialog/examples/llama_test_scene.gd" id="1_script"]

[node name="LlamaTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LlamaInterface Test Scene"

[node name="DownloadPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DownloadPanel"]
layout_mode = 2

[node name="DownloadLabel" type="Label" parent="MarginContainer/VBoxContainer/DownloadPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Downloading..."

[node name="DownloadProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/DownloadPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0

[node name="CancelDownloadBtn" type="Button" parent="MarginContainer/VBoxContainer/DownloadPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Models" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
split_offset = 400

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Models"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToolbarRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel"]
layout_mode = 2

[node name="SortLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ToolbarRow"]
layout_mode = 2
text = "Sort by:"

[node name="SortOption" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ToolbarRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ToolbarRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModelsTree" type="Tree" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel"]
layout_mode = 2

[node name="DownloadModelBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Download"

[node name="LoadModelBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="DeleteModelBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Models/LeftPanel/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Models"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="DetailsLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Models/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Model Details"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Models/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModelDetails" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/Models/RightPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a model to see details"
fit_content = true

[node name="Generation" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="StatusRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/StatusRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No model loaded"

[node name="UnloadBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generation/StatusRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Unload Model"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Generation"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 500

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PromptLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Prompt:"

[node name="PromptInput" type="TextEdit" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter your prompt here..."
wrap_mode = 1
scroll_smooth = true

[node name="GenerateRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="GenerateBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel/GenerateRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Generate"

[node name="ClearBtn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel/GenerateRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Output"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel/GenerateRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel/GenerateRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)

[node name="OutputLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Output:"

[node name="OutputDisplay" type="TextEdit" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1
scroll_smooth = true

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2

[node name="ParamsLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sampling Parameters"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ParamsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TempRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TempRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Temperature"

[node name="TemperatureSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TempRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
value = 0.7

[node name="TemperatureValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TempRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "0.70"
horizontal_alignment = 2

[node name="TopPRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TopPRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Top P"

[node name="TopPSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TopPRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.95

[node name="TopPValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TopPRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "0.95"
horizontal_alignment = 2

[node name="TopKRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TopKRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Top K"

[node name="TopKSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/TopKRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 40.0

[node name="MaxTokensRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/MaxTokensRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Max Tokens"

[node name="MaxTokensSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/MaxTokensRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4096.0
value = 256.0

[node name="RepeatPenaltyRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/RepeatPenaltyRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Repeat Penalty"

[node name="RepeatPenaltySlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/RepeatPenaltyRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.1

[node name="RepeatPenaltyValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/RepeatPenaltyRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1.10"
horizontal_alignment = 2

[node name="MinPRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/MinPRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Min P"

[node name="MinPSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/MinPRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.05

[node name="MinPValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/MinPRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "0.05"
horizontal_alignment = 2

[node name="SeedRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/SeedRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Seed (-1=random)"

[node name="SeedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer/SeedRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 999999.0
value = -1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="StopLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2
text = "Stop Sequences (one per line):"

[node name="StopSequencesInput" type="TextEdit" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "\\n
User:"
scroll_smooth = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2

[node name="ModelInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
layout_mode = 2
text = "Loaded Model:"

[node name="LoadedModelInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/Generation/HSplitContainer/RightPanel/ScrollContainer/ParamsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "No model loaded"
